--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
 <div class="same"> <img src="my-bg.png" alt=""></div> 
 
 </section>
-
+<section class="experiance-area">
+  <div class="experience-fast">
+    <h2>Experience</h2>
+   </div>
+  <div class="experiance-content">
+    <div id="border" class="experiance-item">
+    <h2>Assisant Time in TVA</h2>
+    <h4>2021-present I assisont Time Keeper</h4>
+    <p class="shadow-aline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quasi sed enim recusandae eveniet dicta voluptatem. At, deleniti. Quas voluptatum praesentium at a cum id, ad ab, qui quisquam hic consequuntur! Similique, facere saepe. Non excepturi tenetur exercitationem voluptatem dolorum obcaecati ipsam nulla, perferendis illo blanditiis earum ex, tempore est!</p>
+  
+  </div>
+  <div id="border-item" class="experiance-item">
+   <h2> Savlor of Asgard</h2>
+   <h4>2019-2020 | Savlor of Asgard</h4>
+   <p class="shadow-aline">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio tempore, nostrum, necessitatibus ratione nemo animi reprehenderit amet rerum quasi et culpa ipsa quisquam exercitationem ipsum perspiciatis neque architecto, repellendus officia.</p>
+  
+  </div>
+</div>
+  
+</section>
+<footer>Every action has be reaction</footer>
 
 </body>
 </html>
